# platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy.yml  migrate-smaller-droplet.yml  paperclip-bootstrap-admin.yml  reboot-droplet.yml  resize-droplet.yml  temporary-ssh-access.yml
apps/dotdev/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  app.py  blog.py  pyproject.toml  spotify.py
apps/dotdev/posts/: 2024-09-21-streamlit-to-flask.md  2025-02-14-react-posts-refresh.md  2025-05-21-interactive-travel-map.md  2025-10-08-codex-refactor.md  2026-02-22-vibe-coding-codex-strands.md
apps/dotdev/static/css/: about.css  styles.css
apps/dotdev/static/js/: gallery.js  music.js  posts.js  posts.jsx  scripts.js  travels.js
apps/dotdev/templates/: about.html  base.html  contact.html  home.html  posts.html  resume.html  travels.html
apps/dotdev/tests/: test_about.py  test_posts.py
apps/flow/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/flow/dags/: __init__.py  example_dag.py
apps/flow/dags/utils/: __init__.py
apps/flow/docs/: DEVELOPMENT_GUIDE.md  FIRST_TIME_SETUP.md
apps/flow/scripts/: validate-dags.py
apps/flow/tests/: test_example_dag.py
apps/homi/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.example.yml  pyproject.toml
apps/paperclip/: Dockerfile
apps/prefect/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/prefect/config/: __init__.py  settings.py
apps/prefect/docker/prefect/: start-worker.sh
apps/prefect/docs/: COMPLETE_SETUP_GUIDE.md  DEVELOPMENT_GUIDE.md
apps/prefect/flows/: __init__.py  daily_brief.py
apps/prefect/scripts/: deploy-flows.py  local-down.sh  local-up.sh  setup-blocks.py  setup-server.sh
apps/prefect/tests/: test_daily_brief_dedupe.py  test_deploy_flows.py  test_setup_blocks.py
apps/prefect/tests/integration/: __init__.py  test_local_stack.py
apps/prefect/tests/property/: test_config_properties.py  test_consolidate_postgres_script_properties.py  test_daily_brief_behavior.py  test_deployment_config_properties.py  test_flow_registration_properties.py  test_nginx_properties.py  test_smaller_migration_script_properties.py  test_terraform_properties.py
apps/raman/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.example.yml  install.sh  model_providers_comparison.md  pyproject.toml
apps/raman/docs/: architecture_roadmap.md  backlog.md  current_architecture.md  deployment.md  schema.dbml  telegram_live_testing.md  threaded_conversations.md  tools.md
apps/raman/docs/specs/: coding-agent-roadmap.md  coding-agent.md
apps/raman/evals/: dataset.py  run.py
apps/raman/raman/: __init__.py  agent.py  api.py  cli.py  dbos_gateway.py  gateway.py  grocery.py  local_webhook.py  logging.py  observability.py  settings.py  spec.py  telegram.py  telegram_config.py  tools.py  update.py
apps/raman/scripts/: run-local-prod-debug.sh  set-local-telegram-webhook.sh
apps/raman/spec/: telegram.toml
apps/raman/spec/coder/: agent.toml  system_prompt.md
apps/raman/spec/gobind/: agent.toml  system_prompt.md
apps/raman/spec/leo/: agent.toml  system_prompt.md
apps/raman/spec/raman/: agent.toml  system_prompt.md
apps/raman/tests/: test_agent.py  test_api.py  test_api_gateway.py  test_cli.py  test_coding_tools.py  test_context.py  test_dbos_gateway.py  test_deploy_telegram_env.py  test_eval_dataset.py  test_evals.py  test_gateway.py  test_grocery.py  test_local_webhook.py  test_observability.py  test_spec.py  test_telegram.py  test_telegram_config.py  test_update.py
apps/vikram/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  compose.example.yml  pyproject.toml
deploy/: apps.prod.env
deploy/caddy/: Caddyfile.local  Caddyfile.prod
deploy/compose/: docker-compose.local.yml  docker-compose.prod.yml
deploy/paperclip/: config.local.json  config.prod.json
deploy/postgres/: ensure-paperclip-db.sh  init-platform-dbs.sh
deploy/scripts/: consolidate-postgres.sh  migrate-smaller-droplet.sh  prod-app-flags.sh  render-prod-caddy.sh
docs/: README.md  architecture.md  cloud-architecture-recommendation.md  deployment.md  deprecation-plan.md  developer-guide.md  digitalocean-cost-comparison.md  digitalocean-cost-optimization-plan.md  dns-cutover.md  local-development.md  operations.md  rollback.md  secrets.md  smaller-droplet-migration.md
docs/apps/: README.md  dotdev-architecture.md  flow-architecture.md  homi-architecture.md  paperclip-architecture.md  prefect-architecture.md  raman-architecture.md  vikram-architecture.md
docs/database/: README.md  platform-app-datastores.dbml
infra/terraform/: README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: local-compose.sh  sync-apps.sh  test-apps.sh
(+54 files in other folders)
