[project]
name = "dotDev"
version = "0.1.0"
description = "This repository contains the source code for my personal website."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "gunicorn",
    "markdown",
    "python-frontmatter",
]

[dependency-groups]
dev = [
    "bandit",
    "black>=26.1.0",
    "detect-secrets",
    "isort>=6.1.0",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
