[project]
name = "airflow"
version = "0.1.0"
description = "Apache Airflow deployment infrastructure for Digital Ocean"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==3.1.7",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
