[project]
name = "flow"
version = "0.1.0"
description = "Apache Airflow deployment infrastructure for Digital Ocean"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==3.1.7",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "black>=26.1.0",
    "hypothesis>=6.100.0",
    "isort>=8.0.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
