[project]
name = "prefect-digitalocean-deployment"
version = "0.1.0"
description = "Prefect project for- [x] Refine news to include India and Redmond, WA\n- [x] Add stock market update for Afternoon brief (US)\n- [x] Add stock market update for Morning brief (India)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "prefect>=3.6.25",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "black>=26.1.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "hypothesis>=6.151.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flows*", "config*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
norecursedirs = [".venv", "venv", ".git", "__pycache__"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
