[project]
name = "raman"
version = "0.1.0"
description = "Personal Pydantic AI CLI agent."
requires-python = ">=3.13"
dependencies = [
    "cloudevents>=2.0.0",
    "dbos>=2.21.0",
    "dlt>=1.26.0",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "openlit>=1.42.0",
    "parallel-web>=0.6.0",
    "prefect>=3.7.0",
    "pydantic-ai>=1.93.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "structlog>=25.5.0",
    "telegramify-markdown>=1.1.5",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
raman = "raman.cli:main"
raman-api = "raman.api:run"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pydantic-evals>=1.93.0",
    "pydbml>=1.2.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
